added container class to application.html.erb yield and added some styling to home and about pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+  <h1>Welcome to shakeTheBookie </h1>
+  <h3>This is were we plan to shake the bookie until his pockets are empty</h3>
+</div>
