--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,10 @@
         <li><%= link_to 'About', about_path %></li>
         <li><%= link_to 'Contact Us', new_contact_path %></li>
       </ul>
+      <div class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Sign Up', new_user_session_path, class: 'btn btn-primary navbar-btn' %></li>
+        <li><%= link_to 'Log In', new_user_registration_path, class: 'btn btn-warning navbar-btn' %></li>
+      </div>
     </div>
     
   </div>
