added sign up buttons on home page , in pages#home i added two instance variables = Plan id's and i attached parameters to the button urls , i will use this to redirect to basic or pro sign up forms

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,20 @@
   <h1>Welcome to shakeTheBookie </h1>
   <h3>This is were we plan to shake the bookie until his pockets are empty</h3>
 </div>
+<div class="row">
+  <div class="col-md-6 text-center">
+    <div class="well">
+      <h3>Basic Account</h3>
+      <p>Sign up for a free account! </p>
+      <%= link_to 'Go Basic', new_user_registration_path(@basic_plan.id), class: 'btn btn-block btn-lg btn-primary' %>
+    </div>
+  </div>
+  
+  <div class="col-md-6 text-center">
+    <div class="well">
+      <h3>Pro Account</h3>
+      <p>Sign up for a Pro account!. Get all upcoming tips and be a part of the community. </p>
+      <%= link_to 'Go Pro', new_user_registration_path(@pro_plan.id), class: 'btn btn-block btn-lg btn-warning' %>
+    </div>
+  </div>
+</div>
