--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,9 @@
       
       <div class="nav navbar-nav navbar-right">
         <% if current_user %>
-        <%= link_to 'Sign Out', destroy_user_session_path , class: 'btn btn-primary navbar-btn', method: :delete %>        
+          <%= link_to 'Sign Out', destroy_user_session_path , class: 'btn btn-primary navbar-btn', method: :delete %>        
         <% else %>
-          <%= link_to 'Sign Up', new_user_registration_path , class: 'btn btn-primary navbar-btn', method: :get %>
-          <%= link_to 'Log In', new_user_session_path , class: 'btn btn-warning navbar-btn'method: :get %>
+          <%= link_to 'Log In', new_user_session_path , class: 'btn btn-warning navbar-btn' ,method: :get %>
         <% end %>
      </div>
       
