--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,29 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <div class="well">
-  <h2>Sign up</h2>
+<div class="row"> 
+  <div class="col-md-6 col-md-offset-3 text-center">
+    
+      <% if params[:plan] == '2' %>
+        <h2>Pro Account</h2>
+        <p> See all tips, make money, be happy! </p>
+      <% else %>
+        <h2>Basic Account</h2>
+        <p> Sign up for your free account!  </p>
+      <% end %>
+    
+  </div>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
 
-    <div class="field form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-    </div>
-
-    <div class="field form-group">
-      <%= f.label :password %>
-      <% if @validatable %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "off",class: 'form-control' %>
-    </div>
-
-    <div class="field form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off",class: 'form-control' %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up", class:'btn btn-primary' %>
-    </div>
-  <% end %>
+<div class="col-md-6 col-md-offset-3">
+  <div class="well">
+    
+    <h2>Sign up</h2>
+    <% if params[:plan] == '2' %>
+       <%= render "pro_form" %> 
+    <% else %>
+        <%= render "basic_form" %>      
+    <% end %>    
 
   <%= render "devise/shared/links" %>
-</div>
+    
   </div>
+</div>
     </div>
