--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
-
+    <%= hidden_field_tag 'plan', params[:plan] %>
     <div class="field form-group">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, class: 'form-control' %>
@@ -37,7 +37,7 @@
 
 
     <div class="actions">
-      <%= f.submit "Sign up", class:'btn btn-primary' %>
+      <%= f.submit "Sign up", class:'btn btn-primary', id: 'form-submit-btn' %>
     </div>
   <% end %>
      
